@@ -75,6 +75,7 @@ require 'lobbyist/v2/authorization'
 require 'lobbyist/v2/category'
 require 'lobbyist/v2/company_setting'
 require 'lobbyist/v2/company_subscription'
+require 'lobbyist/v2/company_transaction'
 require 'lobbyist/v2/company_user'
 require 'lobbyist/v2/company'
 require 'lobbyist/v2/contact'
