@@ -1,3 +1,5 @@
+* Added company transaction proxy model for V2.
+
 === 0.5.7 2014-05-13
 
 * Added customer_call_credit V2 API proxy model.
